fix medium-zoom-overlay z-index style bugs
fix medium-zoom-overlay z-index style bugs

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -108,7 +108,7 @@ a
   width: 50%;
 }
 
-.meidium-zoom-overlay{
+.medium-zoom-overlay{
   z-index: 10000;
 }
 
